--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,17 +6,14 @@
 	background-image: linear-gradient(120deg, #155799, #159957);
 }
 
-.header h1, .header h2 {
+.header h1 {
 	color: white;
+    font-weight: bold;
 }
 
 .header h2 {
+    color: white;
 	opacity: 0.7;
-	font-size: 1rem;
-}
-
-section {
-	padding: 2rem 1rem;
 	font-size: 1rem;
 }
 
@@ -60,11 +57,28 @@ h2 {
 	font-size: 16px;
 }
 
+a {
+    text-decoration: none;
+    color: #1e6bb8;
+}
+
+a:hover {
+    text-decoration: underline;
+}
+
+p {
+    margin-bottom: 1rem;
+}
+
+#content-wrapper {
+    padding: 1rem 2rem;
+}
+
 body {
     padding: 0;
     margin: 0;
     font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
-    font-size: 16px;
+    font-size: 1rem;
     line-height: 1.5;
     color: #606c71;
 }
